Social media icons on mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -84,4 +84,8 @@ main {
     .col.s8.m4.card {
         width: 95vw;
     }
+    .btnWidth {
+        width: 48px;
+        height: 48px;
+    }
 }
